# examon-core

./: .flake8  .gitignore  README.md  build.sh  pyproject.toml
.github/workflows/: python-app.yml
examon_core/: __init__.py  code_as_string_factory.py  code_execution_sandbox.py  code_metrics.py  code_metrics_factory.py  examon_item.py  examon_item_registry.py  examon_serializer.py  fn_to_txt.py  function_raw_code.py  multi_choice_factory.py  print_ext.py  question.py  question_factory.py  question_response.py  quiz_item.py  quiz_item_registry.py  todo.md
examon_core/code_execution/: print_collector.py  restricted_python_driver.py  sandbox.py  unrestricted_driver.py
examon_core/models/: __init__.py  choice_helper.py  multi_choice_factory.py  question.py  question_factory.py  quiz_item.py
src/ext/: __init__.py
src/models/: __init__.py  question.py  question_factory.py  question_response.py
tests/: test_code_metrics_factory.py  test_expected_result_question.py  test_fn_to_txt.py  test_free_text_question.py  test_input_parameter_question.py  test_print.py  test_question_factory.py  test_quiz_item_registry.py
tests/code_as_string_factory/: test_code_as_string_factory.py
tests/code_execution/: test_sandbox.py  test_sandbox_restricted_python.py  test_sandbox_unrestricted.py
tests/code_execution_sandbox/: test_code_execution_sandbox.py
tests/code_metrics/: test_calc_difficulty_default_strategy.py  test_code_metrics_factory.py
tests/examon_item_registry/: test_examon_item_registry.py
tests/examon_serializer/: test_serialize.py
tests/models/: test_print.py  (+7 more)
(+19 files in other folders)
