[tool.poetry]
name = "examon-core"
version = "0.3.0"
description = ""
authors = ["Jarrod Folino <jdfolino@icloud.com>"]
readme = "README.md"
packages = [{include = "examon_core"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "7.2.1"
flake8 = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
