[tool.poetry]
name = "examon_core"
version = "1.0.9"
description = "Examon Core Libs"
authors = ["Jarrod Folino <jdfolino@icloud.com>"]
packages = [{include = "examon_core"}]

[tool.poetry.dependencies]
python = "^3.9"
radon = "^6.0.1"
dataclasses-serialization = "^1.3.1"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
secondary = true

[tool.poetry.dev-dependencies]
pytest = "7.2.1"
flake8 = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
